[package]
name = "translation-version"
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.0"
regex = "1.11.1"
pathdiff = "0.2.3"
rust_xlsxwriter = "0.85.0"
log = "0.4.26"
cached = "0.55.1"
clap = { version = "4.5.35", features = ["derive"] }
simple_logger = { version = "5.0.0", features = ["threads"] }
